test/sema/traits/not_a_trait_type_param_requirement_list.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
// CHECK: [[# @LINE + 1 ]]:14: error: NotATrait is not a trait
trait A<T <: NotATrait> {}

// CHECK: [[# @LINE + 1 ]]:15: error: NotATrait is not a trait
struct S<T <: NotATrait> {}

// CHECK: [[# @LINE + 1 ]]:13: error: NotATrait is not a trait
fn foo<T <: NotATrait>() {}

fn main() {}
